--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "punk-api",
   "version": "0.1.0",
   "private": true,
+  "homepage":"https://juliabanerjee.github.io/Punk-API/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.2.7",
@@ -12,6 +13,8 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -36,6 +39,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^3.2.3",
     "sass": "^1.44.0"
   }
 }
