--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,18 +2,19 @@ name: Build and Deploy
 on:
   push:
     branches:
-main
+      - main
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-name: Checkout :bellhop_bell:
+      - name: Checkout 🛎️
         uses: actions/checkout@v2.3.1
-name: Install and Build :wrench: # This example project is built using npm and outputs the result to the 'build' folder. Replace with the commands required to build your project, or remove this step entirely if your site is pre-built.
+
+      - name: Install and Build 🔧 # This example project is built using npm and outputs the result to the 'build' folder. Replace with the commands required to build your project, or remove this step entirely if your site is pre-built.
         run: |
           npm ci
           npm run build
-name: Deploy :rocket:
+      - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@4.1.7
         with:
           branch: gh-pages # The branch the action should deploy to.
